--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -13,6 +13,8 @@
     "date-fns": "^3.6.0",
     "firebase": "^10.12.2",
     "formik": "^2.4.6",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
